--- a/ShoppingCart(Vanheusen)/package.json
+++ b/ShoppingCart(Vanheusen)/package.json
@@ -1,9 +1,11 @@
 {
+  "homepage": "http://sachinsharma189.github.io/E-Commerce-Website",
   "name": "lmncart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "formik": "^1.5.7",
+    "gh-pages": "^2.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-notification-badge": "^1.4.0",
@@ -20,6 +22,8 @@
   },
   "devDependencies": {},
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
